nav visibility fix, text-shadow, members mobile fix

--- a/src/components/nav/Nav.scss
+++ b/src/components/nav/Nav.scss
@@ -22,6 +22,7 @@
                 text-decoration: none;
                 font-size: 2.5rem !important;
                 color: white;
+                text-shadow: 1px 1px black;
                 line-height: 2rem;
                 letter-spacing: 2px;
                 cursor: pointer;
