--- a/src/pages/members/MemberDetails.scss
+++ b/src/pages/members/MemberDetails.scss
@@ -1,9 +1,27 @@
+.bg_main {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100vh;
+    z-index: 10;
+    pointer-events: none;
+    overflow: hidden;
+  
+    @media screen and (min-width: 768px) {
+      top: 0%;
+      left: 10%;
+      width: 80%;
+      height: 90vh;
+    }
+  }
+
 .member_details {
     padding-top: 20vh;
     position: absolute;
     top: 0;
-    left: 5%;
-    width: 80%;
+    left: 0%;
+    width: 90%;
     height: 90vh;
     display: grid;
     gap: 10px;
@@ -16,27 +34,41 @@
       width: 50%;
     }
 
+
     article {
         margin-top: 4rem;
-        width: 80%;
+        margin-bottom: 2rem;
+        width: 100%;
         position: relative;
+        overflow-y: scroll;
+        overflow-x: hidden;
+
+        @media screen and (min-width: 768px) {
+            margin-top: 4rem;
+            width: 80%;
+            overflow: hidden;
+          }
 
         h2 {
-            padding: 0.25rem 1rem 0.25rem 5rem;
+            padding: 0.25rem 1rem 0.25rem 3rem;
             position: relative;
-            font-size: clamp(2rem, 2vw, 3rem);
+            font-size: clamp(1.6rem, 2vw, 3rem);
             text-transform: uppercase;
             text-shadow: 1px 1px rgb(234, 234, 234);
             text-align: left;
             color: rgb(150, 31, 31);
             background-color: #ededed;
             z-index: 100;
+
+            @media screen and (min-width: 768px) {
+                padding: 0.25rem 1rem 0.25rem 5rem;
+              }
     
         }
     
         p {            
             margin-top: 4rem;
-            padding: 0.25rem 1rem 0.25rem 5rem;
+            padding: 0.25rem 1rem 0.25rem 3rem;
             /* white-space: pre; */
             position: relative;
             z-index: 2;
@@ -44,11 +76,15 @@
             font-size: 1rem;
             font-style: normal;
             line-height: normal;
-            font-weight: normal;
+            font-weight: bold;
             font-variant: normal;
             color: #000000;
             text-shadow: 1px 1px rgb(255, 255, 255);
             filter: drop-shadow(5px 5px 3px rgb(113, 29, 29));
+
+            @media screen and (min-width: 768px) {
+                padding: 0.25rem 1rem 0.25rem 5rem;
+              }
         }
     
         img {
